<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.HomeFragment">


    <data>
        <variable
            name="name"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_menu"
            android:src="@drawable/ic_menu"
            android:padding="@dimen/big_margin"
            android:layout_marginTop="@dimen/very_big_margin"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name"
            android:text="@{`Hi `+ name}"
            android:textSize="@dimen/normal_text_height"
            android:textColor="@color/app_green"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/big_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ib_menu"
            app:layout_constraintBottom_toBottomOf="@id/ib_menu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_header"
            android:text="@string/app_name"
            android:textSize="@dimen/very_big_text_height"
            android:textColor="@color/app_orange"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginTop="@dimen/very_very_big_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ib_menu" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_currency"
            android:id="@+id/cl_buy_new"
            android:text="@string/buy_recipe"
            android:textSize="@dimen/normal_text_height"
            android:textColor="@color/app_white"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/app_green"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/tv_header"
            app:layout_constraintBottom_toTopOf="@+id/cl_my_cart"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_currency"
            android:id="@+id/cl_my_cart"
            android:text="@string/my_cart"
            android:textSize="@dimen/normal_text_height"
            android:textColor="@color/app_white"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/app_green"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            android:layout_marginTop="@dimen/very_big_margin"
            android:layout_marginBottom="@dimen/very_big_margin"
            app:layout_constraintTop_toBottomOf="@+id/cl_buy_new"
            app:layout_constraintBottom_toTopOf="@id/cl_my_recipes"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_currency"
            android:id="@+id/cl_my_recipes"
            android:text="@string/my_recipes"
            android:textSize="@dimen/normal_text_height"
            android:textColor="@color/app_white"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@color/app_green"
            android:layout_marginStart="@dimen/big_margin"
            android:layout_marginEnd="@dimen/big_margin"
            app:layout_constraintTop_toBottomOf="@+id/cl_my_cart"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>